Fix: square button small opções com/sem ícone e com/sem texto

--- a/projeto/src/components/SquareButtonSmall/SquareButton_small.module.css
+++ b/projeto/src/components/SquareButtonSmall/SquareButton_small.module.css
@@ -8,11 +8,13 @@
   border: 1px solid rgba(0, 0, 0, 0.17);
   cursor: pointer;
   transition: transform 0.2s ease;
-  display: flex;
+ display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 1rem; 
+  gap: 1rem;
+  min-width: 100px;
+  min-height: 100px; 
 }
 
 .button:hover {
@@ -52,6 +54,11 @@ font-family: 'Montserrat', sans-serif;
   align-items: center;
   justify-content: center;
 }
+
+.noLabel .label {
+  display: none;
+}
+
 /*Outras resoluções*/
 
 @media (min-width: 1440px) {
